tests/errors/syn.missing-colon.post-decl-ident.or
main :: () -> void {
    arr :: struct(x int) {};
    arr;
};
